--- a/index.html
+++ b/index.html
@@ -850,12 +850,12 @@
                     <button class="copy-button" onclick="copyBibtex()">
                         <i class="fas fa-copy"></i> Copy
                     </button>
-                    <pre><code>@article{tritondft2026,
+                    <!-- <pre><code>@article{tritondft2026,
   title={TritonDFT: Automating DFT with a Multi-Agent Framework},
   author={Anonymous Authors},
   journal={International Conference on Machine Learning (ICML)},
   year={2026}
-}</code></pre>
+}</code></pre> -->
                 </div>
             </div>
         </section>
